tests222/tests2/test298.out
lli: <stdin>:1:1: error: expected top-level entity
line 15: function notnot is not defined
^
